# onf

./: .gitignore  CMakeLists.txt  Doxyfile  LALA  Makefile  main.h  project.yml
LALA.dSYM/Contents/: Info.plist
LALA.dSYM/Contents/Resources/DWARF/: LALA
src/: array.c  array.h  build.c  build.h  build.h.in  const.h  cute_files.h  file.c  file.h  main.c  onf.c  onf.h  onf_math.c  onf_math.h  predict.c  predict.h  rya.c  rya.h
test/: test_array.c  test_file.c  test_onf.c  test_onf_math.c  test_rya.c
test/test_files/seqs/: s1.fa  s2.fa
